Bug 1035092 - Fix places that return nullptr as a bool, r=terrence